# ofen

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: _release.yml  lint.yml  release.yml  test.yml  test_release.yml
ofen/: constants.py  enums.py  exceptions.py  logger.py  pretrainable.py  types.py
ofen/batch_processor/: batch_processor.py
ofen/batch_processor/generator/: batch_generator.py  batch_processor.py
ofen/common/: gpu_utils.py  hf_utils.py  model_checker.py  numpy_utils.py  onnx_utils.py  ray_utils.py  tensor_utils.py  torch_utils.py  utils.py
ofen/configs/: optimization_config.py
ofen/configs/base/: base_config.py
ofen/models/: __init__.py
ofen/models/base/: cross_encoder.py  encoder.py  model.py  ort_model.py  text_encoder.py
ofen/models/mixins/: onnx_exportable.py  torch_optimizer.py
ofen/models/onnx/: __init__.py  ort_cross_encoder.py  ort_text_encoder.py
ofen/models/torch/: __init__.py  clip_encoder.py  colbert.py  cross_encoder.py  text_encoder.py
ofen/models/torch/layers/: __init__.py  activation_layer.py  normalization_layer.py  pooling_layer.py
ofen/processors/: __init__.py  base.py  colbert_processor.py  text_processor.py
ofen/runners/: base.py  ray_runner.py  runner.py
scripts/: bench_engines.ipynb  bench_models.ipynb  bench_tokenizer.ipynb
tests/batch_processor/: batch_generator_test.py  batch_processor_test.py
tests/models/torch/: cross_encoder_test.py  text_encoder_test.py
