[project]
name = "ofen"
version = "0.0.1"
description = "Multimodal AI for Content Understanding and Generation"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["AI", "Multimodal", "Content Generation", "Content Understanding"]
authors = [
    { email = "julius@mixedbread.ai", name = "Julius Lipp" },
    { email = "rui@mixedbread.ai", name = "Rui Huang" },
]
maintainers = [{ email = "info@mixedbread.ai", name = "Mixedbread AI" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "huggingface_hub>=0.16.4",
    "tokenizers>=0.13.3",
    "simsimd",
    "numpy>=1.20.0",
    "jmespath",
]

[project.optional-dependencies]
torch = ["torch>=1.13.1", "transformers>=4.36.2"]
onnx = [
    "onnx>=1.15.0",
    "onnxruntime>=1.17.1",
    "onnxsim",
    "onnxconverter_common",
]
onnx-gpu = [
    "onnx>=1.15.0",
    "onnxruntime-gpu>=1.17.1",
    "onnxsim",
    "onnxconverter_common",
]
dev = ["pytest", "pandas", "ruff", "datasets", "pre-commit"]
all = [
    "torch>=1.13.1",
    "transformers>=4.36.2",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.1",
    "onnxsim",
    "onnxconverter_common",
    "pytest",
    "pandas",
    "ruff",
    "datasets",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
